Fix checkbox vertical align

--- a/ddp-workspace/projects/ddp-esc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-esc/src/styles.scss
@@ -2009,6 +2009,10 @@ ddp-activity-dropdown-picklist-question {
 
 .mat-checkbox-layout {
     align-items: normal !important;
+
+    .mat-checkbox-inner-container {
+        margin-top: 4px;
+    }
 }
 
 .mat-input-flex {
